Bug 376706 - "Can't Delete History by Date when grouped by 'Date' or by 'Date and Site'" [p=mak77@supereva.it (Marco Bonardo [mak77]) r=dietrich a=blocking-firefox3+]